# farmhelp

./: README.md  package-lock.json  package.json
backend/: .dockerignore  .env  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  UV_RUN_SETUP.md  envexample.txt  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  utils.py
backend/app/db/: connection.py
backend/app/models/: application.py  contact.py  farmer.py  farmer_auth.py
backend/app/routes/: actualcropprediction.py  actualsenserdata.py  actualtwiliocall.py  adminaddfarmerdata.py  adminapplicationfoamdata.py  admincontactfoamdata.py  adminfarmerdata.py  democropprediction.py  demosenserdata.py  demotwiliocall.py  farmerdata.py  router.py  submitapplicationfoamdata.py  submitcontactfoamdata.py  verifyadmin.py
frontendapp/: hii.txt
frontendweb/: README.md  package-lock.json  package.json
frontendweb/src/app/: globals.css  layout.tsx  page.tsx
frontendweb/src/app/about/: page.tsx
frontendweb/src/app/admin/: layout.tsx  page.tsx
frontendweb/src/app/contact/: page.tsx
frontendweb/src/app/farms/: page.tsx
frontendweb/src/app/service-centers/: page.tsx
frontendweb/src/components/: AddFarmersForm.tsx  AdminApplicationPopUpCard.tsx  AdminContactPopUpCard.tsx  AdminFarmerDetailsCard.tsx  ApplicationForm.tsx  FarmerDetailsCard.tsx  Footer.tsx  Navbar.tsx  Pagination.tsx  PredictCrop.tsx  ServiceCentersCard.tsx  ThemeToggle.tsx
trash/: Crop_Water_Requirements_Complete.xlsx  Final_Merged_Dataset.csv  crop_predicton4.ipynb  dummy_crop_water_dataset.csv  kc_data.csv
(+3 files in other folders)
