[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.128.0",
    "motor>=3.7.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "twilio>=9.3.2",
]

[project.scripts]
dev = "app.main:start"
